style.css
body {
    width: 100%;
    height: 100%;
    overflow-x: hidden;
    background-color: rgb(205, 237, 255);
}

.header {
    font-size: 60px;
    text-align: center;
    margin-bottom: 20px;
    font-family: 'Sherlock Display', sans-serif;
}

.container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    height: 85%;
}

#leftContainer {
    width: 30%;
    font-size: 20px;
    border: 10px ridge gold;
    background-color: rgb(251, 249, 211);
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#rulesHeader {
    height: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 40px;
    font-family: 'Sherlock Display';
}

#rules {
    height: 90%;
    display: flex;
    align-items:flex-start;
    font-family: 'Finland Rounded';
    font-size: 30px;
    font-style: normal;
    padding-right: 10px;
}

li {
    margin-bottom: 20px;
    margin-left: 15px;
    text-indent: -3.5rem;
    
}

li::before {
    content:  "🔑";
    margin: 10px;
}

ol {
    margin-top: 0px;
    list-style: none;
    list-style-position: outside;
}

#middleContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    width: 25%;
    gap: 10px;
}

#guessContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    width: 100%;
    height: 100%;
    gap: 10px;
    background-image: url('images/lock.png');
    background-size: 75%;
    background-repeat: no-repeat;
    background-position: bottom center;
    padding-bottom: 20px;
    flex-wrap: nowrap;
}

#numbersContainer {
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: flex-end;
    gap: 5px;
}

.numbers {
    height: 22%;
    width: 18%;
    font-size: 80px;
    border: solid rgb(255, 199, 58) 5px;
    background-color: rgb(235, 235, 235);
    text-align: center;
    flex-shrink: 1;
}

#timeContainer {
    background-color: rgb(235, 235, 235);
    border: solid 1px black;
    width: 40%;
    text-align: center;
    border: solid rgb(255, 199, 58) 3px;
    font-family: 'Finland Rounded';
    font-size: 35px;
}

.stats {
    width: 86%;
    padding-left: 0px;
    font-family: 'Finland Rounded';
    font-size: 27px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.statNum {
    background-color: rgb(235, 235, 235);
    border: solid 1px black;
    font-size: 35px;
    border: solid rgb(255, 199, 58) 3px;
    padding: 3px;
    
}

#rightContainer {
    width: 30%;
    font-size: 40px;
    text-align: center;
    font-family: 'Sherlock Display', sans-serif;
    background-color: rgb(251, 249, 211);
    border: 10px ridge gold;
    padding: 5px;

}

.guessResults {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-right: 50px;
    height: 560px;
    overflow-y: auto;
    text-align: center;
    font-size: 18px;
    font-family: sans-serif;
    
}

.rowOne {
    display: flex;
    flex-direction: row;
    width: 100%;
    gap: 5px;
}

.rowOneResults {
    border: solid rgb(255, 199, 58) 5px;
    width: 50px;
    height: 60px;
    font-size: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(235, 235, 235);
    margin: 5px;
}

.clueContainer {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 8px;
    font-family: 'Finland Rounded';
    font-size: 30px;
}

.footer {
    bottom: 5px;
    left: 15px;
    position: fixed;
    font-family: 'Finland Rounded';
    font-size: 30px;
}

